[package]
name = "tagmap"
version = "0.0.4"
edition = "2018"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/alttch/tagmap"
description = "PLC-like lightweight-typing tag map"
readme = "README.md"
keywords = ["plc", "map", "json"]

[dependencies]
eva-common = "0.3.1"
uuid = "1.4.0"
