[package]
name = "tagmap"
version = "0.0.5"
edition = "2018"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/alttch/tagmap"
description = "PLC-like lightweight-typing tag map"
readme = "README.md"
keywords = ["plc", "map", "json"]

[dependencies]
eva-common = "0.3.1"
serde = { version = "1.0.164", features = ["derive"] }
